<resources>
    <string name="app_name">NESA</string>
    <string name="login_button_label">login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dialogButtonOk">OK</string>
    <string name="dialogButtonCancel">Cancel</string>
    <string name="loginErrorCredentials">There was an error logging in. Check your username or password</string>
    <string name="loginErrorFailed">There was an error while logging in</string>
    <string name="loginSuccessful">Login successful</string>
    <string name="home">Home</string>
    <string name="grades">Grades</string>
    <string name="absences">Absences</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="grade_overview">Grade overview</string>
    <string name="personal_info">Personal info</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="birthdate">Date of birth</string>
    <string name="major">Major</string>
    <string name="familyorigin">Family origin</string>
    <string name="telefon">Phone</string>
    <string name="mobilephone">Mobile phone</string>
    <string name="bank">Account</string>
    <string name="chf">CHF</string>
    <string name="saldo">Balance:</string>
    <string name="description">Description</string>
    <string name="detailed_statement">Detailed statement</string>
    <string name="amount">Amount</string>
    <string name="balance">Balance</string>
    <string name="date">Date</string>
    <string name="kanti_logo">kanti logo</string>
    <string name="hold_on_while_we_get_your_data">Hold on while we get your data</string>
    <string name="private_mail">Private mail</string>
    <string name="school_mail">School mail</string>
    <string name="youre_offline">You\'re offline</string>
    <string name="synced">Synced</string>
    <string name="average">Ø</string>
    <string name="plus">+</string>
    <string name="grade_details">Grade details</string>
    <string name="weight">Weight</string>
    <string name="grade">Grade</string>
    <string name="open_absences">Open:</string>
    <string name="course">Course</string>
    <string name="absenceType">Absence</string>
    <string name="delayType">Delay</string>
    <string name="department">Department</string>
    <string-array name="spinner">
        <item>Gymnasium</item>
        <item>FMS</item>
    </string-array>
    <string name="deletedGrades1">The grade &quot;</string>
    <string name="deletedGrades2">&quot; was deleted</string>
    <string name="subject">Subject:\u0020</string>
    <string name="exam">Exam:\u0020</string>
    <string name="gradeNot">Grade:\u0020</string>
    <string name="modifiedGrades1">The grade &quot;</string>
    <string name="modifiedGrades2">&quot; was modified</string>
    <string name="addedGrades1">The grade &quot;</string>
    <string name="addedGrades2">&quot; was added</string>

    <string name="absence1">The absence &quot;</string>
    <string name="deletedAbsence2">&quot; was deleted</string>
    <string name="modifiedAbsence2">&quot; was modified</string>
    <string name="addedAbsence2">&quot; was added</string>
    <string name="courseNot">Course:\u0020</string>
    <string name="dateNot">Time:\u0020</string>
    <string name="open">Open</string>

    <string name="bank1">The deduction &quot;</string>
    <string name="deletedBank2">&quot; was deleted</string>
    <string name="modifiedBank2">&quot; was modified</string>
    <string name="addedBank2">&quot; was added</string>
    <string name="balanceBank">Balance:\u0020</string>
    <string name="amountBank">Amount:\u0020</string>
    <string name="bankName">Reason:\u0020</string>
    <string name="subject_name">Subject name</string>

    <string name="logout">Logout</string>

    <string name="invalidValues">The entered values are invalid</string>

    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="colour_customisation">Colour customisation</string>
    <string name="upto">Up to</string>
    <string name="save">save</string>
    <string name="no_data_displayed">No data displayed</string>
    <string name="gender">Gender</string>
    <string name="additional_courses">Additional courses</string>
    <string name="status">Status</string>

    <string name="credentialsChanged">Your username or password changed. You\'re about to be logged out</string>
    <string name="upcomming_lesson">Upcomming Lesson</string>

    <string name="timetable">Timetable</string>
    <string name="time">Time</string>
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="comment">Comment</string>
    <string name="marking">Marking</string>
    <string name="fullDay">Full day</string>
    <string name="contact">Contact</string>
    <string name="students">Students</string>
    <string name="theme">Theme</string>
    <string name="dark_variant">Dark Variant</string>
    <string name="variant">Variant</string>
    <string name="reset">Reset</string>
    <string name="calculate">calculate</string>

    <string-array name="themespinner">
        <item>Follow System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="screentype">
        <item>Without border</item>
        <item>With border</item>
    </string-array>

</resources>