<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/color_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#000"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:layout_marginHorizontal="16dp"/>

    <SeekBar
        android:layout_gravity="center"
        android:id="@+id/red_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:valueFrom="0"
        android:valueTo="255"
        android:stepSize="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:layout_marginHorizontal="16dp"/>

    <SeekBar
        android:layout_gravity="center"
        android:id="@+id/green_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:valueFrom="0"
        android:valueTo="255"
        android:stepSize="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:layout_marginHorizontal="16dp"/>

    <SeekBar
        android:layout_gravity="center"
        android:id="@+id/blue_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:valueFrom="0"
        android:valueTo="255"
        android:stepSize="1"/>

    <EditText
        android:id="@+id/hex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="#000000"
        android:inputType="text"
        android:layout_marginTop="16dp"
        tools:ignore="HardcodedText"
        android:importantForAutofill="no" />

</LinearLayout>